add javafx in the project and fix  fill bug