@@ -10,7 +10,6 @@ import java.net.Socket;
 import java.net.UnknownHostException;
 import java.util.LinkedList;
 import java.util.Queue;
-import java.util.Vector;
 
 import javax.imageio.ImageIO;
 
@@ -18,6 +17,7 @@ import javafx.animation.KeyFrame;
 import javafx.animation.KeyValue;
 import javafx.animation.Timeline;
 import javafx.application.Application;
+import javafx.application.Platform;
 import javafx.beans.value.ChangeListener;
 import javafx.collections.FXCollections;
 import javafx.collections.ObservableList;
@@ -61,19 +61,277 @@ import java.sql.Timestamp;
 public class Paint extends Application {
 
 	private Parameter parameter = new Parameter();
+	private Canvas canvas;
+	private GraphicsContext gc;
+
+	private void draw(History current) {
+		current.mergecolor();
+		if (parameter.history.size() > parameter.history_pointer) {
+			parameter.history.subList(parameter.history_pointer, parameter.history.size()).clear();
+		}
+		parameter.history.add(current);
+		parameter.history_pointer++;
+		gc.beginPath();
+		if (current.DRAW_MOD.equals("PENCIL")) {
+			gc.setLineWidth(current.DRAW_LINEWIDTH);
+			gc.setStroke(current.DRAW_COLOR);
+			for (int j = 0; j < current.point.size(); j++) {
+				gc.lineTo(current.point.get(j).getKey(), current.point.get(j).getValue());
+				gc.stroke();
+			}
+		}
+		if (current.DRAW_MOD.equals("ERASER")) {
+			gc.setLineWidth(current.DRAW_LINEWIDTH);
+			gc.setStroke(Color.WHITE);
+			for (int j = 0; j < current.point.size(); j++) {
+				gc.lineTo(current.point.get(j).getKey(), current.point.get(j).getValue());
+				gc.stroke();
+			}
+		}
+		if (current.DRAW_MOD.equals("SQUARE")) {
+			gc.setLineWidth(current.DRAW_LINEWIDTH);
+			gc.setStroke(current.DRAW_COLOR);
+			gc.setFill(current.DRAW_COLOR);
+			gc.fillRect(Math.min(current.DRAW_STARTX, current.DRAW_ENDX),
+					Math.min(current.DRAW_STARTY, current.DRAW_ENDY), Math.abs(current.DRAW_ENDX - current.DRAW_STARTX),
+					Math.abs(current.DRAW_ENDY - current.DRAW_STARTY));
+
+		}
+		if (current.DRAW_MOD.equals("CIRCLE")) {
+			gc.setLineWidth(current.DRAW_LINEWIDTH);
+			gc.setStroke(current.DRAW_COLOR);
+			gc.setFill(current.DRAW_COLOR);
+			gc.fillOval(Math.min(current.DRAW_STARTX, current.DRAW_ENDX),
+					Math.min(current.DRAW_STARTY, current.DRAW_ENDY), Math.abs(current.DRAW_ENDX - current.DRAW_STARTX),
+					Math.abs(current.DRAW_ENDY - current.DRAW_STARTY));
+		}
+		if (current.DRAW_MOD.equals("FILL")) {
+			PixelReader gpr = canvas.snapshot(null, null).getPixelReader();
+			PixelWriter gpw = gc.getPixelWriter();
+			Color currnt_color = gpr.getColor(current.point.get(0).getKey(), current.point.get(0).getValue());
+			boolean visited[][] = new boolean[(int) canvas.getWidth()][(int) canvas.getHeight()];
+			Queue<Pair<Integer, Integer>> q = new LinkedList<>();
+			q.add(new Pair<>(current.point.get(0).getKey(), current.point.get(0).getValue()));
+			while (!q.isEmpty()) {
+				Pair<Integer, Integer> pair = q.poll();
+				if (visited[pair.getKey()][pair.getValue()] == true)
+					continue;
+				visited[pair.getKey()][pair.getValue()] = true;
+				gpw.setColor(pair.getKey(), pair.getValue(), current.DRAW_COLOR);
+				if (gpr.getColor(pair.getKey(), pair.getValue()).equals(currnt_color)) {
+					if (pair.getKey() + 1 < canvas.getWidth()) {
+						q.add(new Pair<>(pair.getKey() + 1, pair.getValue()));
+						if (pair.getValue() + 1 < canvas.getHeight()) {
+							q.add(new Pair<>(pair.getKey() + 1, pair.getValue() + 1));
+						}
+						if (pair.getValue() - 1 >= 0) {
+							q.add(new Pair<>(pair.getKey() + 1, pair.getValue() - 1));
+						}
+					}
+					if (pair.getKey() - 1 >= 0) {
+						q.add(new Pair<>(pair.getKey() - 1, pair.getValue()));
+						if (pair.getValue() + 1 < canvas.getHeight()) {
+							q.add(new Pair<>(pair.getKey() - 1, pair.getValue() + 1));
+						}
+						if (pair.getValue() - 1 >= 0) {
+							q.add(new Pair<>(pair.getKey() - 1, pair.getValue() - 1));
+						}
+					}
+					if (pair.getValue() - 1 >= 0) {
+						q.add(new Pair<>(pair.getKey(), pair.getValue() - 1));
+					}
+					if (pair.getValue() + 1 < canvas.getHeight()) {
+						q.add(new Pair<>(pair.getKey(), pair.getValue() + 1));
+					}
+				}
+			}
+		}
+		gc.closePath();
+		current.separatecolor();
+	}
+
+	private void undo() {
+		System.out.println(parameter.history);
+		System.out.println(parameter.history_pointer);
+		if (parameter.history_pointer > 0) {
+			parameter.history_pointer--;
+			gc.setFill(Color.WHITE);
+			gc.fillRect(0, 0, 500, 360);
+			for (int i = 0; i < parameter.history_pointer; i++) {
+				History current = parameter.history.get(i);
+				current.mergecolor();
+				gc.beginPath();
+				if (current.DRAW_MOD.equals("PENCIL")) {
+					gc.setLineWidth(current.DRAW_LINEWIDTH);
+					gc.setStroke(current.DRAW_COLOR);
+					for (int j = 0; j < current.point.size(); j++) {
+						gc.lineTo(current.point.get(j).getKey(), current.point.get(j).getValue());
+						gc.stroke();
+					}
+				}
+				if (current.DRAW_MOD.equals("ERASER")) {
+					gc.setLineWidth(current.DRAW_LINEWIDTH);
+					gc.setStroke(Color.WHITE);
+					for (int j = 0; j < current.point.size(); j++) {
+						gc.lineTo(current.point.get(j).getKey(), current.point.get(j).getValue());
+						gc.stroke();
+					}
+				}
+				if (current.DRAW_MOD.equals("SQUARE")) {
+					gc.setLineWidth(current.DRAW_LINEWIDTH);
+					gc.setStroke(current.DRAW_COLOR);
+					gc.setFill(current.DRAW_COLOR);
+					gc.fillRect(Math.min(current.DRAW_STARTX, current.DRAW_ENDX),
+							Math.min(current.DRAW_STARTY, current.DRAW_ENDY),
+							Math.abs(current.DRAW_ENDX - current.DRAW_STARTX),
+							Math.abs(current.DRAW_ENDY - current.DRAW_STARTY));
+
+				}
+				if (current.DRAW_MOD.equals("CIRCLE")) {
+					gc.setLineWidth(current.DRAW_LINEWIDTH);
+					gc.setStroke(current.DRAW_COLOR);
+					gc.setFill(current.DRAW_COLOR);
+					gc.fillOval(Math.min(current.DRAW_STARTX, current.DRAW_ENDX),
+							Math.min(current.DRAW_STARTY, current.DRAW_ENDY),
+							Math.abs(current.DRAW_ENDX - current.DRAW_STARTX),
+							Math.abs(current.DRAW_ENDY - current.DRAW_STARTY));
+				}
+				if (current.DRAW_MOD.equals("FILL")) {
+					PixelReader gpr = canvas.snapshot(null, null).getPixelReader();
+					PixelWriter gpw = gc.getPixelWriter();
+					Color currnt_color = gpr.getColor(current.point.get(0).getKey(), current.point.get(0).getValue());
+					boolean visited[][] = new boolean[(int) canvas.getWidth()][(int) canvas.getHeight()];
+					Queue<Pair<Integer, Integer>> q = new LinkedList<>();
+					q.add(new Pair<>(current.point.get(0).getKey(), current.point.get(0).getValue()));
+					while (!q.isEmpty()) {
+						Pair<Integer, Integer> pair = q.poll();
+						if (visited[pair.getKey()][pair.getValue()] == true)
+							continue;
+						visited[pair.getKey()][pair.getValue()] = true;
+						gpw.setColor(pair.getKey(), pair.getValue(), current.DRAW_COLOR);
+						if (gpr.getColor(pair.getKey(), pair.getValue()).equals(currnt_color)) {
+							if (pair.getKey() + 1 < canvas.getWidth()) {
+								q.add(new Pair<>(pair.getKey() + 1, pair.getValue()));
+								if (pair.getValue() + 1 < canvas.getHeight()) {
+									q.add(new Pair<>(pair.getKey() + 1, pair.getValue() + 1));
+								}
+								if (pair.getValue() - 1 >= 0) {
+									q.add(new Pair<>(pair.getKey() + 1, pair.getValue() - 1));
+								}
+							}
+							if (pair.getKey() - 1 >= 0) {
+								q.add(new Pair<>(pair.getKey() - 1, pair.getValue()));
+								if (pair.getValue() + 1 < canvas.getHeight()) {
+									q.add(new Pair<>(pair.getKey() - 1, pair.getValue() + 1));
+								}
+								if (pair.getValue() - 1 >= 0) {
+									q.add(new Pair<>(pair.getKey() - 1, pair.getValue() - 1));
+								}
+							}
+							if (pair.getValue() - 1 >= 0) {
+								q.add(new Pair<>(pair.getKey(), pair.getValue() - 1));
+							}
+							if (pair.getValue() + 1 < canvas.getHeight()) {
+								q.add(new Pair<>(pair.getKey(), pair.getValue() + 1));
+							}
+						}
+					}
+				}
+				gc.closePath();
+			}
+		}
+	}
+
+	private void redo() {
+		System.out.println(parameter.history);
+		System.out.println(parameter.history_pointer);
+		if (parameter.history_pointer < parameter.history.size()) {
+			History current = parameter.history.get(parameter.history_pointer);
+			current.mergecolor();
+			parameter.history_pointer++;
+			gc.beginPath();
+			if (current.DRAW_MOD.equals("PENCIL")) {
+				gc.setLineWidth(current.DRAW_LINEWIDTH);
+				gc.setStroke(current.DRAW_COLOR);
+				for (int j = 0; j < current.point.size(); j++) {
+					gc.lineTo(current.point.get(j).getKey(), current.point.get(j).getValue());
+					gc.stroke();
+				}
+			}
+			if (current.DRAW_MOD.equals("ERASER")) {
+				gc.setLineWidth(current.DRAW_LINEWIDTH);
+				gc.setStroke(Color.WHITE);
+				for (int j = 0; j < current.point.size(); j++) {
+					gc.lineTo(current.point.get(j).getKey(), current.point.get(j).getValue());
+					gc.stroke();
+				}
+			}
+			if (current.DRAW_MOD.equals("SQUARE")) {
+				gc.setLineWidth(current.DRAW_LINEWIDTH);
+				gc.setStroke(current.DRAW_COLOR);
+				gc.setFill(current.DRAW_COLOR);
+				gc.fillRect(Math.min(current.DRAW_STARTX, current.DRAW_ENDX),
+						Math.min(current.DRAW_STARTY, current.DRAW_ENDY),
+						Math.abs(current.DRAW_ENDX - current.DRAW_STARTX),
+						Math.abs(current.DRAW_ENDY - current.DRAW_STARTY));
+
+			}
+			if (current.DRAW_MOD.equals("CIRCLE")) {
+				gc.setLineWidth(current.DRAW_LINEWIDTH);
+				gc.setStroke(current.DRAW_COLOR);
+				gc.setFill(current.DRAW_COLOR);
+				gc.fillOval(Math.min(current.DRAW_STARTX, current.DRAW_ENDX),
+						Math.min(current.DRAW_STARTY, current.DRAW_ENDY),
+						Math.abs(current.DRAW_ENDX - current.DRAW_STARTX),
+						Math.abs(current.DRAW_ENDY - current.DRAW_STARTY));
+			}
+			if (current.DRAW_MOD.equals("FILL")) {
+				PixelReader gpr = canvas.snapshot(null, null).getPixelReader();
+				PixelWriter gpw = gc.getPixelWriter();
+				Color currnt_color = gpr.getColor(current.point.get(0).getKey(), current.point.get(0).getValue());
+				boolean visited[][] = new boolean[(int) canvas.getWidth()][(int) canvas.getHeight()];
+				Queue<Pair<Integer, Integer>> q = new LinkedList<>();
+				q.add(new Pair<>(current.point.get(0).getKey(), current.point.get(0).getValue()));
+				while (!q.isEmpty()) {
+					Pair<Integer, Integer> pair = q.poll();
+					if (visited[pair.getKey()][pair.getValue()] == true)
+						continue;
+					visited[pair.getKey()][pair.getValue()] = true;
+					gpw.setColor(pair.getKey(), pair.getValue(), current.DRAW_COLOR);
+					if (gpr.getColor(pair.getKey(), pair.getValue()).equals(currnt_color)) {
+						if (pair.getKey() + 1 < canvas.getWidth()) {
+							q.add(new Pair<>(pair.getKey() + 1, pair.getValue()));
+							if (pair.getValue() + 1 < canvas.getHeight()) {
+								q.add(new Pair<>(pair.getKey() + 1, pair.getValue() + 1));
+							}
+							if (pair.getValue() - 1 >= 0) {
+								q.add(new Pair<>(pair.getKey() + 1, pair.getValue() - 1));
+							}
+						}
+						if (pair.getKey() - 1 >= 0) {
+							q.add(new Pair<>(pair.getKey() - 1, pair.getValue()));
+							if (pair.getValue() + 1 < canvas.getHeight()) {
+								q.add(new Pair<>(pair.getKey() - 1, pair.getValue() + 1));
+							}
+							if (pair.getValue() - 1 >= 0) {
+								q.add(new Pair<>(pair.getKey() - 1, pair.getValue() - 1));
+							}
+						}
+						if (pair.getValue() - 1 >= 0) {
+							q.add(new Pair<>(pair.getKey(), pair.getValue() - 1));
+						}
+						if (pair.getValue() + 1 < canvas.getHeight()) {
+							q.add(new Pair<>(pair.getKey(), pair.getValue() + 1));
+						}
+					}
+				}
+			}
+			gc.closePath();
+		}
+	}
 
 	@Override
 	public void start(Stage primaryStage) {
-		parameter.START_DRAW = false;
-		parameter.DRAW_MOD = "PENCIL";
-		parameter.DRAW_COLOR = Color.BLACK;
-		parameter.DRAW_LINEWIDTH = 1;
-		parameter.DRAW_STARTX = 0;
-		parameter.DRAW_STARTY = 0;
-		parameter.historytmp = null;
-		parameter.history = new Vector<History>();
-		parameter.history_pointer = 0;
-
 		Label label1 = new Label(" Mouse In Canvas: X: " + 0 + ", Y: " + 0);
 		label1.setPrefWidth(580);
 		label1.setStyle("-fx-border-color: gray;");
@@ -87,9 +345,9 @@ public class Paint extends Application {
 		bottom_border.setPrefHeight(20);
 		bottom_border.setPrefWidth(640);
 
-		Canvas canvas = new Canvas(500, 360);
+		canvas = new Canvas(500, 360);
 
-		GraphicsContext gc = canvas.getGraphicsContext2D();
+		gc = canvas.getGraphicsContext2D();
 		gc.setFill(Color.WHITE);
 		gc.fillRect(0, 0, 500, 360);
 
@@ -185,110 +443,22 @@ public class Paint extends Application {
 		btn6.setOnAction(new EventHandler<ActionEvent>() {
 			@Override
 			public void handle(ActionEvent event) {
-				System.out.println(parameter.history);
-				System.out.println(parameter.history_pointer);
-				if (parameter.history_pointer - 1 >= 0) {
-					parameter.history_pointer--;
-					gc.setFill(Color.WHITE);
-					gc.fillRect(0, 0, 500, 360);
-					for (int i = 0; i < parameter.history_pointer; i++) {
-						History tmphistory = parameter.history.get(i);
-						gc.beginPath();
-						if (tmphistory.DRAW_MOD.equals("PENCIL")) {
-							gc.setLineWidth(tmphistory.DRAW_LINEWIDTH);
-							gc.setStroke(tmphistory.DRAW_COLOR);
-							for (int j = 0; j < tmphistory.point.size(); j++) {
-								gc.lineTo(tmphistory.point.get(j).getKey(), tmphistory.point.get(j).getValue());
-								gc.stroke();
-							}
-						}
-						if (tmphistory.DRAW_MOD.equals("ERASER")) {
-							gc.setLineWidth(tmphistory.DRAW_LINEWIDTH);
-							gc.setStroke(Color.WHITE);
-							for (int j = 0; j < tmphistory.point.size(); j++) {
-								gc.lineTo(tmphistory.point.get(j).getKey(), tmphistory.point.get(j).getValue());
-								gc.stroke();
-							}
-						}
-						if (tmphistory.DRAW_MOD.equals("SQUARE")) {
-							gc.setLineWidth(tmphistory.DRAW_LINEWIDTH);
-							gc.setStroke(tmphistory.DRAW_COLOR);
-							gc.setFill(tmphistory.DRAW_COLOR);
-							gc.fillRect(Math.min(tmphistory.DRAW_STARTX, tmphistory.DRAW_ENDX),
-									Math.min(tmphistory.DRAW_STARTY, tmphistory.DRAW_ENDY),
-									Math.abs(tmphistory.DRAW_ENDX - tmphistory.DRAW_STARTX),
-									Math.abs(tmphistory.DRAW_ENDY - tmphistory.DRAW_STARTY));
-
-						}
-						if (tmphistory.DRAW_MOD.equals("CIRCLE")) {
-							gc.setLineWidth(tmphistory.DRAW_LINEWIDTH);
-							gc.setStroke(tmphistory.DRAW_COLOR);
-							gc.setFill(tmphistory.DRAW_COLOR);
-							gc.fillOval(Math.min(tmphistory.DRAW_STARTX, tmphistory.DRAW_ENDX),
-									Math.min(tmphistory.DRAW_STARTY, tmphistory.DRAW_ENDY),
-									Math.abs(tmphistory.DRAW_ENDX - tmphistory.DRAW_STARTX),
-									Math.abs(tmphistory.DRAW_ENDY - tmphistory.DRAW_STARTY));
-						}
-						if (tmphistory.DRAW_MOD.equals("FILL")) {
-							PixelReader gpr = canvas.snapshot(null, null).getPixelReader();
-							PixelWriter gpw = gc.getPixelWriter();
-							Color currnt_color = gpr.getColor(tmphistory.point.get(0).getKey(),
-									tmphistory.point.get(0).getValue());
-							boolean visited[][] = new boolean[(int) canvas.getWidth()][(int) canvas.getHeight()];
-							Queue<Pair<Integer, Integer>> q = new LinkedList<>();
-							q.add(new Pair<>(tmphistory.point.get(0).getKey(), tmphistory.point.get(0).getValue()));
-							while (!q.isEmpty()) {
-								Pair<Integer, Integer> pair = q.poll();
-								if (visited[pair.getKey()][pair.getValue()] == true)
-									continue;
-								visited[pair.getKey()][pair.getValue()] = true;
-								gpw.setColor(pair.getKey(), pair.getValue(), tmphistory.DRAW_COLOR);
-								if (gpr.getColor(pair.getKey(), pair.getValue()).equals(currnt_color)) {
-									if (pair.getKey() + 1 < canvas.getWidth()) {
-										q.add(new Pair<>(pair.getKey() + 1, pair.getValue()));
-										if (pair.getValue() + 1 < canvas.getHeight()) {
-											q.add(new Pair<>(pair.getKey() + 1, pair.getValue() + 1));
-										}
-										if (pair.getValue() - 1 >= 0) {
-											q.add(new Pair<>(pair.getKey() + 1, pair.getValue() - 1));
-										}
-									}
-									if (pair.getKey() - 1 >= 0) {
-										q.add(new Pair<>(pair.getKey() - 1, pair.getValue()));
-										if (pair.getValue() + 1 < canvas.getHeight()) {
-											q.add(new Pair<>(pair.getKey() - 1, pair.getValue() + 1));
-										}
-										if (pair.getValue() - 1 >= 0) {
-											q.add(new Pair<>(pair.getKey() - 1, pair.getValue() - 1));
-										}
-									}
-									if (pair.getValue() - 1 >= 0) {
-										q.add(new Pair<>(pair.getKey(), pair.getValue() - 1));
-									}
-									if (pair.getValue() + 1 < canvas.getHeight()) {
-										q.add(new Pair<>(pair.getKey(), pair.getValue() + 1));
-									}
-								}
-							}
-						}
-						gc.closePath();						
+				undo();
+				if (parameter.Client != null) {
+					try {
+						System.out.println("Client send undo");
+						parameter.Client.write(new Message("Undo"));
+					} catch (IOException e1) {
+						e1.printStackTrace();
 					}
-					if (parameter.Client != null) {
-						try {
-							System.out.println("Client send undo");
-							parameter.Client.write(new Message("Undo"));
-						} catch (IOException e1) {
-							e1.printStackTrace();
+				}
+				if (parameter.Server != null) {
+					try {
+						for (int j = 0; j < parameter.Server.size(); j++) {
+							parameter.Server.get(j).write(new Message("Undo"));
 						}
-					}
-					if (parameter.Server != null) {
-						try {
-							for (int j = 0; j < parameter.Server.size(); j++) {
-								parameter.Server.get(j).write(new Message("Undo"));
-							}
-						} catch (IOException e1) {
-							e1.printStackTrace();
-						}
+					} catch (IOException e1) {
+						e1.printStackTrace();
 					}
 				}
 			}
@@ -300,91 +470,7 @@ public class Paint extends Application {
 		btn7.setOnAction(new EventHandler<ActionEvent>() {
 			@Override
 			public void handle(ActionEvent event) {
-				System.out.println(parameter.history);
-				System.out.println(parameter.history_pointer);
-				if (parameter.history_pointer < parameter.history.size()) {
-					History tmphistory = parameter.history.get(parameter.history_pointer);
-					parameter.history_pointer++;
-					gc.beginPath();
-					if (tmphistory.DRAW_MOD.equals("PENCIL")) {
-						gc.setLineWidth(tmphistory.DRAW_LINEWIDTH);
-						gc.setStroke(tmphistory.DRAW_COLOR);
-						for (int j = 0; j < tmphistory.point.size(); j++) {
-							gc.lineTo(tmphistory.point.get(j).getKey(), tmphistory.point.get(j).getValue());
-							gc.stroke();
-						}
-					}
-					if (tmphistory.DRAW_MOD.equals("ERASER")) {
-						gc.setLineWidth(tmphistory.DRAW_LINEWIDTH);
-						gc.setStroke(Color.WHITE);
-						for (int j = 0; j < tmphistory.point.size(); j++) {
-							gc.lineTo(tmphistory.point.get(j).getKey(), tmphistory.point.get(j).getValue());
-							gc.stroke();
-						}
-					}
-					if (tmphistory.DRAW_MOD.equals("SQUARE")) {
-						gc.setLineWidth(tmphistory.DRAW_LINEWIDTH);
-						gc.setStroke(tmphistory.DRAW_COLOR);
-						gc.setFill(tmphistory.DRAW_COLOR);
-						gc.fillRect(Math.min(tmphistory.DRAW_STARTX, tmphistory.DRAW_ENDX),
-								Math.min(tmphistory.DRAW_STARTY, tmphistory.DRAW_ENDY),
-								Math.abs(tmphistory.DRAW_ENDX - tmphistory.DRAW_STARTX),
-								Math.abs(tmphistory.DRAW_ENDY - tmphistory.DRAW_STARTY));
-
-					}
-					if (tmphistory.DRAW_MOD.equals("CIRCLE")) {
-						gc.setLineWidth(tmphistory.DRAW_LINEWIDTH);
-						gc.setStroke(tmphistory.DRAW_COLOR);
-						gc.setFill(tmphistory.DRAW_COLOR);
-						gc.fillOval(Math.min(tmphistory.DRAW_STARTX, tmphistory.DRAW_ENDX),
-								Math.min(tmphistory.DRAW_STARTY, tmphistory.DRAW_ENDY),
-								Math.abs(tmphistory.DRAW_ENDX - tmphistory.DRAW_STARTX),
-								Math.abs(tmphistory.DRAW_ENDY - tmphistory.DRAW_STARTY));
-					}
-					if (tmphistory.DRAW_MOD.equals("FILL")) {
-						PixelReader gpr = canvas.snapshot(null, null).getPixelReader();
-						PixelWriter gpw = gc.getPixelWriter();
-						Color currnt_color = gpr.getColor(tmphistory.point.get(0).getKey(),
-								tmphistory.point.get(0).getValue());
-						boolean visited[][] = new boolean[(int) canvas.getWidth()][(int) canvas.getHeight()];
-						Queue<Pair<Integer, Integer>> q = new LinkedList<>();
-						q.add(new Pair<>(tmphistory.point.get(0).getKey(), tmphistory.point.get(0).getValue()));
-						while (!q.isEmpty()) {
-							Pair<Integer, Integer> pair = q.poll();
-							if (visited[pair.getKey()][pair.getValue()] == true)
-								continue;
-							visited[pair.getKey()][pair.getValue()] = true;
-							gpw.setColor(pair.getKey(), pair.getValue(), tmphistory.DRAW_COLOR);
-							if (gpr.getColor(pair.getKey(), pair.getValue()).equals(currnt_color)) {
-								if (pair.getKey() + 1 < canvas.getWidth()) {
-									q.add(new Pair<>(pair.getKey() + 1, pair.getValue()));
-									if (pair.getValue() + 1 < canvas.getHeight()) {
-										q.add(new Pair<>(pair.getKey() + 1, pair.getValue() + 1));
-									}
-									if (pair.getValue() - 1 >= 0) {
-										q.add(new Pair<>(pair.getKey() + 1, pair.getValue() - 1));
-									}
-								}
-								if (pair.getKey() - 1 >= 0) {
-									q.add(new Pair<>(pair.getKey() - 1, pair.getValue()));
-									if (pair.getValue() + 1 < canvas.getHeight()) {
-										q.add(new Pair<>(pair.getKey() - 1, pair.getValue() + 1));
-									}
-									if (pair.getValue() - 1 >= 0) {
-										q.add(new Pair<>(pair.getKey() - 1, pair.getValue() - 1));
-									}
-								}
-								if (pair.getValue() - 1 >= 0) {
-									q.add(new Pair<>(pair.getKey(), pair.getValue() - 1));
-								}
-								if (pair.getValue() + 1 < canvas.getHeight()) {
-									q.add(new Pair<>(pair.getKey(), pair.getValue() + 1));
-								}
-							}
-						}
-					}
-					gc.closePath();
-				}
+				redo();
 				if (parameter.Client != null) {
 					try {
 						parameter.Client.write(new Message("Redo"));
@@ -496,43 +582,71 @@ public class Paint extends Application {
 						try {
 							ServerSocket ss = new ServerSocket(30000);
 							System.out.println("伺服器開始運行 !");
-							while (true) {
+							while (!ss.isClosed()) {
 								Socket Server = ss.accept();
 								parameter.Server.add(new SocketServer(Server));
-								parameter.Server.lastElement().set_canvas(canvas);
-								parameter.Server.lastElement().set_parameter(parameter);
 								parameter.Server.lastElement().start();
 							}
+							ss.close();
 						} catch (Exception e) {
+							e.printStackTrace();
 						}
 
 					});
 					Serverthread.setDaemon(true);
 					Serverthread.start();
 
-					// when server get the message, server send to every client
-					var updatethread = new Thread(() -> {
-						while (true) {
-							for (int i = 0; i < parameter.Server.size(); i++) {
-								if (parameter.Server.get(i).tmp.peek() != null) {
-									System.out.println(parameter.Server.get(i).tmp.peek());
-									for (int j = 0; j < parameter.Server.size(); j++) {
-										if (i != j)
-											try {
-												parameter.Server.get(i).tmp.peek().history.separatecolor();
-												parameter.Server.get(j).write(parameter.Server.get(i).tmp.peek());
-												parameter.Server.get(i).tmp.peek().history.mergecolor();
-											} catch (Exception e) {
-												e.printStackTrace();
-											}
+					Thread updateServer = new Thread(new Runnable() {
+
+						@Override
+						public void run() {
+							while (true) {
+								for (int i = 0; i < parameter.Server.size(); i++) {
+									if (parameter.Server.get(i).messages.peek() != null) {
+										System.out.println(parameter.Server.get(i).messages.peek());
+										if (parameter.Server.get(i).messages.peek().type.equals("History")) {
+											final History todraw = parameter.Server.get(i).messages.peek().history;
+											Platform.runLater(new Runnable() {
+												@Override
+												public void run() {
+													draw(todraw);
+												}
+											});
+										} else if (parameter.Server.get(i).messages.peek().type.equals("Undo")) {
+											Platform.runLater(new Runnable() {
+												@Override
+												public void run() {
+													undo();
+												}
+											});
+										} else if (parameter.Server.get(i).messages.peek().type.equals("Redo")) {
+											Platform.runLater(new Runnable() {
+												@Override
+												public void run() {
+													redo();
+												}
+											});
+										}
+										for (int j = 0; j < parameter.Server.size(); j++) {
+											if (i != j)
+												try {
+													parameter.Server.get(i).messages.peek().history.separatecolor();
+													parameter.Server.get(j)
+															.write(parameter.Server.get(i).messages.peek());
+													parameter.Server.get(i).messages.peek().history.mergecolor();
+												} catch (Exception e) {
+													e.printStackTrace();
+												}
+										}
+										parameter.Server.get(i).messages.poll();
 									}
-									parameter.Server.get(i).tmp.poll();
 								}
 							}
 						}
+
 					});
-					updatethread.setDaemon(true);
-					updatethread.start();
+					updateServer.setDaemon(true);
+					updateServer.start();
 				} catch (UnknownHostException e1) {
 					e1.printStackTrace();
 				}
@@ -554,12 +668,50 @@ public class Paint extends Application {
 					setaddress = textInputDialog.getResult();
 				}
 				final String address = setaddress;
-				primaryStage.setTitle("多人小畫家 Client ip "+address);
+				primaryStage.setTitle("多人小畫家 Client ip " + address);
 				parameter.Client = new SocketClient();
 				parameter.Client.set_address(address);
-				parameter.Client.set_canvas(canvas);
-				parameter.Client.set_parameter(parameter);
 				parameter.Client.start();
+
+				Thread updateClient = new Thread(new Runnable() {
+
+					@Override
+					public void run() {
+						while (true) {
+							System.out.println(parameter.Client.messages.size());
+							if (parameter.Client.messages.peek() != null) {
+								System.out.println(parameter.Client.messages.peek());
+								if (parameter.Client.messages.peek().type.equals("History")) {
+									final History todraw = parameter.Client.messages.peek().history;
+									Platform.runLater(new Runnable() {
+										@Override
+										public void run() {
+											draw(todraw);
+										}
+									});
+								} else if (parameter.Client.messages.peek().type.equals("Undo")) {
+									Platform.runLater(new Runnable() {
+										@Override
+										public void run() {
+											undo();
+										}
+									});
+								} else if (parameter.Client.messages.peek().type.equals("Redo")) {
+									Platform.runLater(new Runnable() {
+										@Override
+										public void run() {
+											redo();
+										}
+									});
+								}
+								parameter.Client.messages.poll();
+							}
+						}
+					}
+
+				});
+				updateClient.setDaemon(true);
+				updateClient.start();
 			}
 		});
 		menuBar.setPrefHeight(20);
@@ -578,8 +730,8 @@ public class Paint extends Application {
 			@Override
 			public void handle(MouseEvent e) {
 				if (e.getX() > 140 && e.getY() > 20 && e.getY() < 380)
-					label1.setText(" Mouse In Canvas: X: " + (int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0
-							+ ", Y: " + (int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0);
+					label1.setText(" Mouse In Canvas: X: " + (int) (Math.round(e.getX() - 140.0)) + ", Y: "
+							+ (int) (Math.round(e.getY() - 20.0)));
 				else
 					label1.setText(" Mouse In Canvas: X: " + 0 + ", Y: " + 0);
 			}
@@ -592,17 +744,16 @@ public class Paint extends Application {
 					parameter.historytmp = new History();
 					parameter.START_DRAW = true;
 
-					parameter.historytmp.DRAW_STARTX = (int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0;
-					parameter.historytmp.DRAW_STARTY = (int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0;
+					parameter.historytmp.DRAW_STARTX = (int) (Math.round(e.getX() - 140.0));
+					parameter.historytmp.DRAW_STARTY = (int) (Math.round(e.getY() - 20.0));
 					parameter.historytmp.DRAW_COLOR = parameter.DRAW_COLOR;
 					parameter.historytmp.DRAW_MOD = parameter.DRAW_MOD;
 					parameter.historytmp.DRAW_LINEWIDTH = parameter.DRAW_LINEWIDTH;
-					parameter.DRAW_STARTX = (int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0;
-					parameter.DRAW_STARTY = (int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0;
+					parameter.DRAW_STARTX = (int) (Math.round(e.getX() - 140.0));
+					parameter.DRAW_STARTY = (int) (Math.round(e.getY() - 20.0));
 					gc.beginPath();
 					gc.setLineWidth(parameter.DRAW_LINEWIDTH);
-					gc.moveTo((int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0,
-							(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0);
+					gc.moveTo((int) (Math.round(e.getX() - 140.0)), (int) (Math.round(e.getY() - 20.0)));
 					if (parameter.DRAW_MOD == "PENCIL") {
 						parameter.penanimation = new Circle(e.getX(), e.getY() + 2, parameter.DRAW_LINEWIDTH,
 								Color.WHITE);
@@ -610,34 +761,32 @@ public class Paint extends Application {
 						border.getChildren().add(parameter.penanimation);
 						primaryStage.show();
 						gc.setStroke(parameter.DRAW_COLOR);
-						gc.lineTo((int) (Math.round((e.getX() - 140) * 100.0)) / 100.0,
-								(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0);
+						gc.lineTo((int) (Math.round(e.getX() - 140)), (int) (Math.round(e.getY() - 20.0)));
 						gc.stroke();
-						parameter.historytmp.point.add(new Pair<Integer, Integer>(
-								new Integer((int) ((int) (Math.round((e.getX() - 140) * 100.0)) / 100.0)),
-								new Integer((int) ((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0))));
+						parameter.historytmp.point
+								.add(new Pair<Integer, Integer>(Integer.valueOf((int) (Math.round(e.getX() - 140))),
+										Integer.valueOf((int) (Math.round(e.getY() - 20.0)))));
 					}
-					if (parameter.DRAW_MOD == "ERASER") {
+					else if (parameter.DRAW_MOD == "ERASER") {
 						parameter.penanimation = new Circle(e.getX(), e.getY() + 2, parameter.DRAW_LINEWIDTH,
 								Color.WHITE);
 						parameter.penanimation.setStroke(Color.BLACK);
 						border.getChildren().add(parameter.penanimation);
 						primaryStage.show();
 						gc.setStroke(Color.WHITE);
-						gc.lineTo((int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0,
-								(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0);
+						gc.lineTo((int) (Math.round(e.getX() - 140.0)), (int) (Math.round(e.getY() - 20.0)));
 						gc.stroke();
-						parameter.historytmp.point.add(new Pair<Integer, Integer>(
-								new Integer((int) ((int) (Math.round((e.getX() - 140) * 100.0)) / 100.0)),
-								new Integer((int) ((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0))));
+						parameter.historytmp.point
+								.add(new Pair<Integer, Integer>(Integer.valueOf((int) (Math.round(e.getX() - 140))),
+										Integer.valueOf((int) (Math.round(e.getY() - 20.0)))));
 					}
-					if (parameter.DRAW_MOD == "SQUARE") {
+					else if (parameter.DRAW_MOD == "SQUARE") {
 						parameter.rectangleanimation = new Rectangle(e.getX(), e.getY(), 0, 0);
 						parameter.rectangleanimation.setFill(parameter.DRAW_COLOR);
 						border.getChildren().add(parameter.rectangleanimation);
 						primaryStage.show();
 					}
-					if (parameter.DRAW_MOD == "CIRCLE") {
+					else if (parameter.DRAW_MOD == "CIRCLE") {
 						parameter.ellipseanimation = new Ellipse(e.getX(), e.getY(), 0, 0);
 						parameter.ellipseanimation.setFill(parameter.DRAW_COLOR);
 						border.getChildren().add(parameter.ellipseanimation);
@@ -655,75 +804,64 @@ public class Paint extends Application {
 					if (parameter.DRAW_MOD == "PENCIL") {
 						Timeline timeline = new Timeline();
 						KeyValue kv1 = new KeyValue(parameter.penanimation.centerXProperty(),
-								(int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0 + 140);
+								(int) (Math.round(e.getX() - 140.0)) + 140);
 						KeyValue kv2 = new KeyValue(parameter.penanimation.centerYProperty(),
-								(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0 + 24);
+								(int) (Math.round(e.getY() - 20.0)) + 24);
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(1), kv1));
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(1), kv2));
 						timeline.play();
 						gc.setStroke(parameter.DRAW_COLOR);
-						gc.lineTo((int) (Math.round((e.getX() - 140) * 100.0)) / 100.0,
-								(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0);
+						gc.lineTo((int) (Math.round((e.getX() - 140))),
+								(int) (Math.round(e.getY() - 20.0)));
 						gc.stroke();
-						parameter.historytmp.point.add(new Pair<Integer, Integer>(
-								new Integer((int) ((int) (Math.round((e.getX() - 140) * 100.0)) / 100.0)),
-								new Integer((int) ((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0))));
+						parameter.historytmp.point
+								.add(new Pair<Integer, Integer>(Integer.valueOf((int) (Math.round(e.getX() - 140))),
+										Integer.valueOf((int) (Math.round(e.getY() - 20.0)))));
 					}
-					if (parameter.DRAW_MOD == "ERASER") {
+					else if (parameter.DRAW_MOD == "ERASER") {
 						Timeline timeline = new Timeline();
 						KeyValue kv1 = new KeyValue(parameter.penanimation.centerXProperty(),
-								(int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0 + 140);
+								(int) (Math.round(e.getX() - 140.0)) + 140);
 						KeyValue kv2 = new KeyValue(parameter.penanimation.centerYProperty(),
-								(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0 + 24);
+								(int) (Math.round(e.getY() - 20.0)) + 24);
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(1), kv1));
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(1), kv2));
 						timeline.play();
 						gc.setStroke(Color.WHITE);
-						gc.lineTo((int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0,
-								(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0);
+						gc.lineTo((int) (Math.round(e.getX() - 140.0)), (int) (Math.round(e.getY() - 20.0)));
 						gc.stroke();
-						parameter.historytmp.point.add(new Pair<Integer, Integer>(
-								new Integer((int) ((int) (Math.round((e.getX() - 140) * 100.0)) / 100.0)),
-								new Integer((int) ((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0))));
+						parameter.historytmp.point
+								.add(new Pair<Integer, Integer>(Integer.valueOf((int) (Math.round(e.getX() - 140))),
+										Integer.valueOf((int) (Math.round(e.getY() - 20.0)))));
 					}
-					if (parameter.DRAW_MOD == "SQUARE") {
+					else if (parameter.DRAW_MOD == "SQUARE") {
 						Timeline timeline = new Timeline();
 						KeyValue kv1 = new KeyValue(parameter.rectangleanimation.xProperty(),
-								Math.min(parameter.DRAW_STARTX, (int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0)
-										+ 140);
+								Math.min(parameter.DRAW_STARTX, (int) (Math.round(e.getX() - 140.0))) + 140);
 						KeyValue kv2 = new KeyValue(parameter.rectangleanimation.yProperty(),
-								Math.min(parameter.DRAW_STARTY, (int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0)
-										+ 26);
-						KeyValue kv3 = new KeyValue(parameter.rectangleanimation.widthProperty(), Math
-								.abs((int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0 - parameter.DRAW_STARTX));
-						KeyValue kv4 = new KeyValue(parameter.rectangleanimation.heightProperty(), Math
-								.abs((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0 - parameter.DRAW_STARTY));
+								Math.min(parameter.DRAW_STARTY, (int) (Math.round(e.getY() - 20.0))) + 26);
+						KeyValue kv3 = new KeyValue(parameter.rectangleanimation.widthProperty(),
+								Math.abs((int) (Math.round(e.getX() - 140.0)) - parameter.DRAW_STARTX));
+						KeyValue kv4 = new KeyValue(parameter.rectangleanimation.heightProperty(),
+								Math.abs((int) (Math.round(e.getY() - 20.0)) - parameter.DRAW_STARTY));
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(10), kv1));
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(10), kv2));
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(10), kv3));
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(10), kv4));
 						timeline.play();
 					}
-					if (parameter.DRAW_MOD == "CIRCLE") {
+					else if (parameter.DRAW_MOD == "CIRCLE") {
 						Timeline timeline = new Timeline();
-						KeyValue kv1 = new KeyValue(parameter.ellipseanimation.centerXProperty(), Math
-								.min(parameter.DRAW_STARTX, (int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0)
-								+ 140
-								+ Math.abs(
-										(int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0 - parameter.DRAW_STARTX)
-										/ 2);
-						KeyValue kv2 = new KeyValue(parameter.ellipseanimation.centerYProperty(), Math
-								.min(parameter.DRAW_STARTY, (int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0)
-								+ 26
-								+ Math.abs(
-										(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0 - parameter.DRAW_STARTY)
-										/ 2);
+						KeyValue kv1 = new KeyValue(parameter.ellipseanimation.centerXProperty(),
+								Math.min(parameter.DRAW_STARTX, (int) (Math.round(e.getX() - 140.0))) + 140
+										+ Math.abs((int) (Math.round(e.getX() - 140.0)) - parameter.DRAW_STARTX) / 2);
+						KeyValue kv2 = new KeyValue(parameter.ellipseanimation.centerYProperty(),
+								Math.min(parameter.DRAW_STARTY, (int) (Math.round(e.getY() - 20.0))) + 26
+										+ Math.abs((int) (Math.round(e.getY() - 20.0)) - parameter.DRAW_STARTY) / 2);
 						KeyValue kv3 = new KeyValue(parameter.ellipseanimation.radiusXProperty(),
-								Math.abs((int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0 - parameter.DRAW_STARTX)
-										/ 2);
+								Math.abs((int) (Math.round(e.getX() - 140.0)) - parameter.DRAW_STARTX) / 2);
 						KeyValue kv4 = new KeyValue(parameter.ellipseanimation.radiusYProperty(),
-								Math.abs((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0 - parameter.DRAW_STARTY)
-										/ 2);
+								Math.abs((int) (Math.round(e.getY() - 20.0)) - parameter.DRAW_STARTY) / 2);
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(10), kv1));
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(10), kv2));
 						timeline.getKeyFrames().add(new KeyFrame(Duration.millis(10), kv3));
@@ -745,30 +883,20 @@ public class Paint extends Application {
 						if (parameter.DRAW_MOD == "SQUARE") {
 							gc.setFill(parameter.DRAW_COLOR);
 							gc.setStroke(parameter.DRAW_COLOR);
-							gc.fillRect(
-									Math.min(parameter.DRAW_STARTX,
-											(int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0),
-									Math.min(parameter.DRAW_STARTY,
-											(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0),
-									Math.abs((int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0
-											- parameter.DRAW_STARTX),
-									Math.abs((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0
-											- parameter.DRAW_STARTY));
+							gc.fillRect(Math.min(parameter.DRAW_STARTX, (int) (Math.round(e.getX() - 140.0))),
+									Math.min(parameter.DRAW_STARTY, (int) (Math.round(e.getY() - 20.0))),
+									Math.abs((int) (Math.round(e.getX() - 140.0)) - parameter.DRAW_STARTX),
+									Math.abs((int) (Math.round(e.getY() - 20.0)) - parameter.DRAW_STARTY));
 						}
-						if (parameter.DRAW_MOD == "CIRCLE") {
+						else if (parameter.DRAW_MOD == "CIRCLE") {
 							gc.setFill(parameter.DRAW_COLOR);
 							gc.setStroke(parameter.DRAW_COLOR);
-							gc.fillOval(
-									Math.min(parameter.DRAW_STARTX,
-											(int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0),
-									Math.min(parameter.DRAW_STARTY,
-											(int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0),
-									Math.abs((int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0
-											- parameter.DRAW_STARTX),
-									Math.abs((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0
-											- parameter.DRAW_STARTY));
+							gc.fillOval(Math.min(parameter.DRAW_STARTX, (int) (Math.round(e.getX() - 140.0))),
+									Math.min(parameter.DRAW_STARTY, (int) (Math.round(e.getY() - 20.0))),
+									Math.abs((int) (Math.round(e.getX() - 140.0)) - parameter.DRAW_STARTX),
+									Math.abs((int) (Math.round(e.getY() - 20.0)) - parameter.DRAW_STARTY));
 						}
-						if (parameter.DRAW_MOD == "FILL") {
+						else if (parameter.DRAW_MOD == "FILL") {
 							PixelReader gpr = canvas.snapshot(null, null).getPixelReader();
 							PixelWriter gpw = gc.getPixelWriter();
 							Color currnt_color = gpr.getColor((int) (e.getX() - 140.0), (int) (e.getY() - 20.0));
@@ -808,17 +936,17 @@ public class Paint extends Application {
 									}
 								}
 							}
-							parameter.historytmp.point.add(new Pair<Integer, Integer>(
-									new Integer((int) ((int) (Math.round((e.getX() - 140) * 100.0)) / 100.0)),
-									new Integer((int) ((int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0))));
+							parameter.historytmp.point
+									.add(new Pair<Integer, Integer>(Integer.valueOf((int) (Math.round(e.getX() - 140))),
+											Integer.valueOf((int) (Math.round(e.getY() - 20.0)))));
 						}
 						parameter.DRAW_STARTX = 0;
 						parameter.DRAW_STARTY = 0;
 						parameter.START_DRAW = false;
 
 						// history
-						parameter.historytmp.DRAW_ENDX = (int) (Math.round((e.getX() - 140.0) * 100.0)) / 100.0;
-						parameter.historytmp.DRAW_ENDY = (int) (Math.round((e.getY() - 20.0) * 100.0)) / 100.0;
+						parameter.historytmp.DRAW_ENDX = (int) (Math.round(e.getX() - 140.0));
+						parameter.historytmp.DRAW_ENDY = (int) (Math.round(e.getY() - 20.0));
 						parameter.historytmp.create_time = new Timestamp(System.currentTimeMillis());
 						if (parameter.history.size() > parameter.history_pointer) {
 							parameter.history.subList(parameter.history_pointer, parameter.history.size()).clear();
